@@ -221,6 +221,7 @@ G_FILE_ATTRIBUTE_FILESYSTEM_TYPE
 G_FILE_ATTRIBUTE_FILESYSTEM_READONLY
 G_FILE_ATTRIBUTE_GVFS_BACKEND
 G_FILE_ATTRIBUTE_SELINUX_CONTEXT
+G_FILE_ATTRIBUTE_TRASH_ITEM_COUNT
 g_file_info_new
 g_file_info_dup
 g_file_info_copy_into
